[package]
name = "survivor-pool-calc"
authors = ["Stewart Chandler <stewartdchandler@gmail.com>"]
description = """A simple CLI program for calculating the maximum odds for every pick in a \
    survivor pool given the odds of each game in the season and the proability of winning the pool \
    for each round you can exit in."""
readme = "README.md"
repository = "https://github.com/StewartChandler/Survivor-Pool-Calc"
license = "GPL-3.0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
